--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,13 +2,13 @@
 # tasks file for group
 - name: GROUP | Managing groups...
   ansible.builtin.group:
-    force:  "{{ item.force }}"
-    gid:  "{{ item.gid | default(omit) }}"
-    local:  "{{ item.local }}"
-    name: "{{ item }}"
-    non_unique: "{{ item.non_unique }}"
-    state: "{{ item.state }}"
-    system: "{{ item.system }}"
+    force: '{{ item.force | default("false") }}'
+    gid: '{{ item.gid | default(omit) }}'
+    local: '{{ item.local | default("false") }}'
+    name: '{{ item }}'
+    non_unique: '{{ item.non_unique | default("false") }}'
+    state: '{{ item.state | default("present") }}'
+    system: '{{ item.system | default("false") }}'
   with_items: "{{ group }}"
   tags: [ group,manage ]
 
